# immich-slideshow

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.image-server  Dockerfile.image-transformer  Dockerfile.immich-fetcher  README.md  docker-compose.test.yml  docker-compose.yml  fetcher-docker-compose.yml  manifest.scm
conversion/: convert_image.sh  fetch_model.py  stylize.py
scripts/: convert_image.sh
src/: image_transformer.rs  image_transformer_lib.rs  immich_fetcher.rs  lib.rs  main.rs  server.rs  server_lib.rs
tensorflow/: stylize.py
tests/: create_test_image.rs  e2e_test.rs  image_transformer_test.rs  immich_fetcher_test.rs  mock_immich_server.rs  mock_immich_server_bin.rs  run_e2e_test.sh  server_test.rs
