[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "image-server"
path = "src/main.rs"

[[bin]]
name = "immich-fetcher"
path = "src/immich_fetcher.rs"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
