[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "image_server_lib"
path = "src/lib.rs"

[[bin]]
name = "image-server"
path = "src/server.rs"

[[bin]]
name = "immich-fetcher"
path = "src/immich_fetcher.rs"

[[bin]]
name = "image-transformer"
path = "src/image_transformer.rs"

[[bin]]
name = "mock-immich-server"
path = "tests/mock_immich_server_bin.rs"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
notify = "6.1"
actix-rt = "2.10.0"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"
